--- a/index.html
+++ b/index.html
@@ -3347,10 +3347,10 @@
      </section>
 
     <!-- EXTRA INFO SECTION -->
-     <section class="mt-5">
+     <section class="my-5">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-3 mt-2">
           <div class="border border-1 px-4 py-3 rounded">
             <i class="bi bi-truck fs-4"></i>
             <h4>Free delivery</h4>
@@ -3358,25 +3358,25 @@
           </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-3 mt-2">
             <div class="border border-1 px-4 py-3 rounded">
-              <i class="bi bi-wallet2"></i>
+              <i class="bi bi-wallet2 fs-4"></i>
               <h4>100% secure payment</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-3 mt-2">
             <div class="border border-1 px-4 py-3 rounded">
-              <i class="bi bi-wallet2"></i>
+              <i class="bi bi-flower1 fs-4"></i>
               <h4>Quality guarantee</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-3 mt-2">
             <div class="border border-1 px-4 py-3 rounded">
-              <i class="bi bi-check-circle"></i>
+              <i class="bi bi-check-circle fs-4"></i>
               <h4>Guaranteed savings</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
             </div>
@@ -3385,8 +3385,114 @@
       </div>
      </section>
 
-
-     <!-- FOOTER SECTON -->
+    <!-- FOOTER SECTION -->
+     <footer class="pt-5 mb-5">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-3 mt-3">
+             <div class="d-flex justify-content-center">
+               <img src="images/logo.svg" class="w-75" alt="logo">
+             </div>
+              <div class="mt-3">
+                <ul class="social_links d-flex gap-2 justify-content-center">
+                  <li>
+                    <i class="fa-brands fa-facebook-f border border-1 rounded text-muted"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-twitter border border-1 rounded text-muted"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-youtube border border-1 rounded text-muted"></i>
+                  </li> 
+                  <li>
+                    <i class="fa-brands fa-instagram border border-1 rounded text-muted"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-amazon border border-1 rounded text-muted"></i>
+                  </li>
+                </ul>
+              </div>
+          </div>
+          <div class="col-md-2 mt-3">
+            <h4>Organic</h4>
+              <ul class="footer_links">
+                <li>
+                  <a href="#">About us</a>
+                </li>
+                <li>
+                  <a href="#">Conditions</a>
+                </li>
+                <li>
+                  <a href="#">Our Journals</a>
+                </li>
+                <li>
+                  <a href="#">Careers</a>
+                </li>
+                <li>
+                  <a href="#">Affiliate Programme</a>
+                </li>
+                <li>
+                  <a href="#">Ultras Press</a>
+                </li>
+              </ul>
+          </div>
+          <div class="col-md-2 mt-3">
+            <h4>Quick Links</h4>
+              <ul class="footer_links">
+                <li>
+                  <a href="#">Offers</a>
+                </li>
+                <li>
+                  <a href="#">Discount Coupons</a>
+                </li>
+                <li>
+                  <a href="#">Stores</a>
+                </li>
+                <li>
+                  <a href="#">Track Order</a>
+                </li>
+                <li>
+                  <a href="#">Shop</a>
+                </li>
+                <li>
+                  <a href="#">Info</a>
+                </li>
+              </ul>
+            </div>
+          <div class="col-md-2 mt-3">
+            <h4>Customer Service</h4>
+              <ul class="footer_links">
+                <li>
+                  <a href="#">FAQ</a>
+                </li>
+                <li>
+                  <a href="#">Contact</a>
+                </li>
+                <li>
+                  <a href="#">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="#">Returns & Refunds</a>
+                </li>
+                <li>
+                  <a href="#">Cookie Guidelines</a>
+                </li>
+                <li>
+                  <a href="#">Delivery Information</a>
+                </li>
+              </ul>
+          </div>
+          <div class="col-md-3 mt-3">
+            <h4>Subscribe Us</h4>
+            <p>Subscribe to our newsletter to get updates about our grand offers.</p>
+            <div class="d-flex">
+              <input type="email" name="email" id="email" placeholder="Email Address" class="w-75 border-0 rounded-start ps-2 bg-success-subtle py-1">
+              <input type="submit" value="Subscribe" class="w-25 bg-dark text-white border-0 ps-2 py-1 rounded-end">
+            </div>
+          </div>
+        </div>
+      </div>
+     </footer>
 
 
     <script
