--- a/index.html
+++ b/index.html
@@ -3232,9 +3232,9 @@
           </div>
         </div>
 
-      <!-- products card -->
+      <!-- blog cards -->
       <div class="row pt-4">
-          <div class="col-md-4">
+          <div class="col-md-4 mt-3">
             <div class="card p-3 blog_card shadow">
               <a href="#">
                 <img src="images/post-thumbnail-1.jpg" class="w-100 img-fluid" alt="blog-img">
@@ -3263,7 +3263,7 @@
             </div>
           </div> 
 
-          <div class="col-md-4">
+          <div class="col-md-4 mt-3">
             <div class="card p-3 blog_card shadow">
               <a href="#">
                 <img src="images/post-thumbnail-2.jpg" class="w-100 img-fluid" alt="blog-img">
@@ -3292,7 +3292,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 mt-3">
             <div class="card p-3 shadow">
               <img src="images/post-thumbnail-3.jpg" class="w-100 img-fluid" alt="">
               <div class="row mt-3 px-3">
@@ -3324,7 +3324,7 @@
     </section>
 
     <!-- DOWNLOAD APP SECTION -->
-     <section class="mt-4 download_app">
+     <section class="mt-5 download_app p-4">
       <div class="container-fluid">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-4">
@@ -3350,7 +3350,7 @@
      <section class="my-5">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-3 mt-2">
+          <div class="col-md-3 col-sm-6 mt-2">
           <div class="border border-1 px-4 py-3 rounded">
             <i class="bi bi-truck fs-4"></i>
             <h4>Free delivery</h4>
@@ -3358,7 +3358,7 @@
           </div>
           </div>
 
-          <div class="col-md-3 mt-2">
+          <div class="col-md-3 col-sm-6 mt-2">
             <div class="border border-1 px-4 py-3 rounded">
               <i class="bi bi-wallet2 fs-4"></i>
               <h4>100% secure payment</h4>
@@ -3366,7 +3366,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mt-2">
+          <div class="col-md-3 col-sm-6 mt-2">
             <div class="border border-1 px-4 py-3 rounded">
               <i class="bi bi-flower1 fs-4"></i>
               <h4>Quality guarantee</h4>
@@ -3374,7 +3374,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mt-2">
+          <div class="col-md-3 col-sm-6 mt-2">
             <div class="border border-1 px-4 py-3 rounded">
               <i class="bi bi-check-circle fs-4"></i>
               <h4>Guaranteed savings</h4>
@@ -3413,7 +3413,7 @@
                 </ul>
               </div>
           </div>
-          <div class="col-md-2 mt-3">
+          <div class="col-md-2 mt-3 text-sm-center">
             <h4>Organic</h4>
               <ul class="footer_links">
                 <li>
@@ -3436,7 +3436,7 @@
                 </li>
               </ul>
           </div>
-          <div class="col-md-2 mt-3">
+          <div class="col-md-2 mt-3 text-sm-center">
             <h4>Quick Links</h4>
               <ul class="footer_links">
                 <li>
@@ -3459,7 +3459,7 @@
                 </li>
               </ul>
             </div>
-          <div class="col-md-2 mt-3">
+          <div class="col-md-2 mt-3 text-sm-center">
             <h4>Customer Service</h4>
               <ul class="footer_links">
                 <li>
@@ -3482,7 +3482,7 @@
                 </li>
               </ul>
           </div>
-          <div class="col-md-3 mt-3">
+          <div class="col-md-3 mt-3 text-sm-center">
             <h4>Subscribe Us</h4>
             <p>Subscribe to our newsletter to get updates about our grand offers.</p>
             <div class="d-flex">
