blog and single blog page created

--- a/index.html
+++ b/index.html
@@ -186,18 +186,10 @@
                     PAGES
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">ABOUT US</a></li>
-                    <li><a class="dropdown-item" href="#">SHOP</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">SINGLE PRODUCT</a>
-                    </li>
                     <li><a class="dropdown-item" href="#">CART</a></li>
                     <li><a class="dropdown-item" href="#">CHECKOUT</a></li>
-                    <li><a class="dropdown-item" href="#">BLOG</a></li>
-                    <li><a class="dropdown-item" href="#">SINGLE POST</a></li>
-                    <li><a class="dropdown-item" href="#">STYLES</a></li>
+                    <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
                     <li><a class="dropdown-item" href="#">CONTACT</a></li>
-                    <li><a class="dropdown-item" href="#">THANK YOU</a></li>
                     <li><a class="dropdown-item" href="#">MY ACCOUNT</a></li>
                     <li><a class="dropdown-item" href="#">404 PAGE</a></li>
                   </ul>
@@ -3184,14 +3176,14 @@
               </a>
               <div class="row mt-3 px-3">
                 <div class="col-md-6 col-sm-6 col-6">
-                  <div class="div d-flex">
+                  <div class="d-flex">
                     <i class="bi bi-calendar-check text-muted me-2"></i>
                     <p class="text-muted">22 Aug 2021</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 col-sm-6 col-6">
-                  <div class="div d-flex">
+                  <div class="d-flex">
                    <i class="fa-regular fa-folder text-muted mt-1 me-2"></i>
                     <p class="text-muted">tips & tricks</p>
                   </div>
@@ -3213,14 +3205,14 @@
               </a>
               <div class="row mt-3 px-3">
                 <div class="col-md-6 col-sm-6 col-6">
-                  <div class="div d-flex">
+                  <div class="d-flex">
                     <i class="bi bi-calendar-check text-muted me-2"></i>
                     <p class="text-muted">22 Aug 2021</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 col-sm-6 col-6">
-                  <div class="div d-flex">
+                  <div class="d-flex">
                    <i class="fa-regular fa-folder text-muted mt-1 me-2"></i>
                     <p class="text-muted">tips & tricks</p>
                   </div>
@@ -3240,7 +3232,7 @@
               <img src="images/post-thumbnail-3.jpg" class="w-100 img-fluid" alt="">
               <div class="row mt-3 px-3">
                 <div class="col-md-6 col-sm-6 col-6">
-                  <div class="div d-flex">
+                  <div class="d-flex">
                     <i class="bi bi-calendar-check me-2 text-muted"></i>
                     <p class="text-muted">22 Aug 2021</p>
                   </div>
