single blog page modified

--- a/blog.html
+++ b/blog.html
@@ -216,27 +216,8 @@
 
 <!-- BLOG SECTION -->
     <section class="pt-3 section_animation">
-      <div class="container-fluid ps-4">
-        <!-- heading text & angle brackets -->
-        <div class="row d-flex justify-content-between">
-          <div class="col-md-6 col-sm-6 col-6">
-            <h2>Our Recent Blog</h2>
-          </div>
-          <div
-            class="col-md-6 col-sm-6 col-6 d-flex gap-3 align-items-center justify-content-end"
-          >
-            <div>
-              <a
-                href="#"
-                class="px-3 py-2 rounded-2 bg-success list-unstyled text-decoration-none text-light view_btn_hover"
-                type="submit"
-                >View All</a
-              >
-            </div>
-          </div>
-        </div>
-
-      <!-- blog cards -->
+      <div class="container">
+        <!-- blog cards -->
       <div class="row pt-4">
           <div class="col-md-4 mt-3">
             <div class="card p-3 blog_card shadow">
@@ -327,6 +308,7 @@
               </div>
             </div>
           </div> 
+      </div>
       </div>
     </section>
 
