image size modified

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
                   <a href="#" class="text-dark text-decoration-none">
                   <i class="fa-solid fa-cat me-3"></i>Pet Food and Supplies</a>
+                  <hr class="me-4">
               </div>
              </div>
           </div>
@@ -189,6 +190,7 @@
                     <li><a class="dropdown-item" href="#">CART</a></li>
                     <li><a class="dropdown-item" href="#">CHECKOUT</a></li>
                     <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                    <li><a class="dropdown-item" href="single_post.html">SINGLE BLOG</a></li>
                     <li><a class="dropdown-item" href="#">CONTACT</a></li>
                     <li><a class="dropdown-item" href="#">MY ACCOUNT</a></li>
                     <li><a class="dropdown-item" href="#">404 PAGE</a></li>
@@ -365,10 +367,10 @@
       <div class="container-fluid ps-4">
         <!-- categori text & angle brackets -->
         <div class="row d-flex justify-content-between">
-          <div class="col-md-6 col-sm-6 col-6">
+          <div class="col-md-4 col-sm-6 col-6">
             <h2>Categories</h2>
           </div>
-          <div class="col-md-6 col-sm-6 col-6 d-flex gap-3 align-items-center justify-content-end">
+          <div class="col-md-8 col-sm-6 col-6 d-flex gap-3 align-items-center justify-content-end">
             <div class="">
               <a
                 href="#"
@@ -3147,31 +3149,12 @@
 
     <!-- BLOG SECTION -->
     <section class="pt-3 section_animation">
-      <div class="container-fluid ps-4">
-        <!-- heading text & angle brackets -->
-        <div class="row d-flex justify-content-between">
-          <div class="col-md-6 col-sm-6 col-6">
-            <h2>Our Recent Blog</h2>
-          </div>
-          <div
-            class="col-md-6 col-sm-6 col-6 d-flex gap-3 align-items-center justify-content-end"
-          >
-            <div>
-              <a
-                href="#"
-                class="px-3 py-2 rounded-2 bg-success list-unstyled text-decoration-none text-light view_btn_hover"
-                type="submit"
-                >View All</a
-              >
-            </div>
-          </div>
-        </div>
-
-      <!-- blog cards -->
+      <div class="container">
+        <!-- blog cards -->
       <div class="row pt-4">
           <div class="col-md-4 mt-3">
             <div class="card p-3 blog_card shadow">
-              <a href="#">
+              <a href="single_post.html">
                 <img src="images/post-thumbnail-1.jpg" class="w-100 img-fluid" alt="blog-img">
               </a>
               <div class="row mt-3 px-3">
@@ -3190,17 +3173,18 @@
                 </div>
               </div>
               <div class="px-3">
-                <a href="#" class="text-decoration-none text-dark ">
-                  <h4>Top 10 casual look ideas to dress up your kids</h4>
+                <a href="single_post.html" class="text-decoration-none  ">
+                  <h4 class="text-dark">Top 10 casual look ideas to dress up your kids</h4>
+
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed corrupti incidunt perferendis repellendus maiores, rerum fuga nobis dolorum...</p>
                 </a>
-                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed corrupti incidunt perferendis repellendus maiores, rerum fuga nobis dolorum...</p>
               </div>
             </div>
           </div> 
 
           <div class="col-md-4 mt-3">
             <div class="card p-3 blog_card shadow">
-              <a href="#">
+              <a href="single_post.html">
                 <img src="images/post-thumbnail-2.jpg" class="w-100 img-fluid" alt="blog-img">
               </a>
               <div class="row mt-3 px-3">
@@ -3219,17 +3203,20 @@
                 </div>
               </div>
               <div class="px-3">
-                <a href="#" class="text-decoration-none text-dark ">
-                  <h4>Top 10 casual look ideas to dress up your kids</h4>
-                </a>
+                <a href="single_post.html" class="text-decoration-none ">
+                  <h4 class="text-dark">Top 10 casual look ideas to dress up your kids</h4>
+                
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed corrupti incidunt perferendis repellendus maiores, rerum fuga nobis dolorum...</p>
+                </a>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mt-3">
             <div class="card p-3 shadow">
-              <img src="images/post-thumbnail-3.jpg" class="w-100 img-fluid" alt="">
+              <a href="single_post.html">
+                <img src="images/post-thumbnail-3.jpg" class="w-100 img-fluid" alt="">
+              </a>
               <div class="row mt-3 px-3">
                 <div class="col-md-6 col-sm-6 col-6">
                   <div class="d-flex">
@@ -3246,13 +3233,15 @@
                 </div>
               </div>
               <div class="px-3">
-                <a href="#" class="text-decoration-none text-dark ">
-                  <h4>10 Different Types of comfortable clothes ideas for women</h4>
-                </a>
+                <a href="single_post.html" class="text-decoration-none  ">
+                  <h4 class="text-dark">10 Different Types of clothes ideas for women</h4>
+                
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sed corrupti incidunt perferendis repellendus maiores, rerum fuga nobis dolorum...</p>
+                </a>
               </div>
             </div>
           </div> 
+      </div>
       </div>
     </section>
 
