--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Organic Food</title>
+    <link rel="icon" href="images/fav-icon.png" type="image/png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -572,7 +573,8 @@
   <div class="col-md-7 col-sm-6 col-6 p-0 text-center">
     <div class="bg-success rounded py-2 view_btn_hover">
       <a href="#" class="rounded text-white text-decoration-none">
-        <i class="bi bi-cart3"></i> Add to cart
+        <i class="bi bi-cart3"></i> 
+        <span class="d-none d-sm-inline">Add to cart</span>
       </a>
     </div>
   </div>
@@ -632,7 +634,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -693,7 +695,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -754,7 +756,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -815,7 +817,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -876,7 +878,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -937,7 +939,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -998,7 +1000,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1059,7 +1061,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1120,7 +1122,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1258,7 +1260,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1319,7 +1321,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1380,7 +1382,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1441,7 +1443,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1502,7 +1504,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1563,7 +1565,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1624,7 +1626,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1685,7 +1687,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1746,7 +1748,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1807,7 +1809,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1930,7 +1932,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -1991,7 +1993,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2052,7 +2054,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2113,7 +2115,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2174,7 +2176,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div> 
@@ -2235,7 +2237,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2296,7 +2298,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2357,7 +2359,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2418,7 +2420,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2479,7 +2481,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2577,7 +2579,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2638,7 +2640,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2699,7 +2701,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2760,7 +2762,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2821,7 +2823,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2882,7 +2884,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -2943,7 +2945,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -3004,7 +3006,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -3065,7 +3067,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
@@ -3126,7 +3128,7 @@
                         class="rounded text-white text-decoration-none"
                       >
                         <i class="bi bi-cart3"></i>
-                        Add to cart
+                        <span class="d-none d-sm-inline">Add to cart</span>
                       </a>
                     </div>
                   </div>
