--- a/index.html
+++ b/index.html
@@ -188,13 +188,15 @@
                     PAGES
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">CART</a></li>
-                    <li><a class="dropdown-item" href="#">CHECKOUT</a></li>
+                    <li><a class="dropdown-item" href="about_us.html">ABOUT US</a></li>
+                    <li><a class="dropdown-item" href="single_product.html">SINGLE PRODUCT</a></li>
+                    <li><a class="dropdown-item" href="cart.html">CART</a></li>
+                    <li><a class="dropdown-item" href="checkout.html">CHECKOUT</a></li>
                     <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
                     <li><a class="dropdown-item" href="single_post.html">SINGLE BLOG</a></li>
-                    <li><a class="dropdown-item" href="#">CONTACT</a></li>
-                    <li><a class="dropdown-item" href="#">MY ACCOUNT</a></li>
-                    <li><a class="dropdown-item" href="#">404 PAGE</a></li>
+                    <li><a class="dropdown-item" href="contact.html">CONTACT</a></li>
+                    <li><a class="dropdown-item" href="my_account.html">MY ACCOUNT</a></li>
+                    <li><a class="dropdown-item" href="error_page.html">404 PAGE</a></li>
                   </ul>
                 </li>
               </ul>
