--- a/error_page.html
+++ b/error_page.html
@@ -219,264 +219,116 @@
       </div>
     </div>
 
-    <!-- BLOG SECTION -->
-    <section class="pt-3 section_animation">
-      <div class="container">
-        <!-- blog cards -->
-        <div class="row pt-4">
-          <div class="col-md-4 mt-3">
-            <div class="card p-3 blog_card shadow">
-              <a href="single_post.html">
-                <img
-                  src="images/post-thumbnail-1.jpg"
-                  class="w-100 img-fluid"
-                  alt="blog-img"
-                />
-              </a>
-              <div class="row mt-3 px-3">
-                <div class="col-md-6 col-sm-6 col-6">
-                  <div class="d-flex">
-                    <i class="bi bi-calendar-check text-muted me-2"></i>
-                    <p class="text-muted">22 Aug 2021</p>
-                  </div>
-                </div>
 
-                <div class="col-md-6 col-sm-6 col-6">
-                  <div class="d-flex">
-                    <i class="fa-regular fa-folder text-muted mt-1 me-2"></i>
-                    <p class="text-muted">tips & tricks</p>
-                  </div>
-                </div>
-              </div>
-              <div class="px-3">
-                <a href="single_post.html" class="text-decoration-none">
-                  <h4 class="text-dark">
-                    Top 10 casual look ideas to dress up your kids
-                  </h4>
-
-                  <p class="text-muted">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptas sed corrupti incidunt perferendis repellendus
-                    maiores, rerum fuga nobis dolorum...
-                  </p>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mt-3">
-            <div class="card p-3 blog_card shadow">
-              <a href="single_post.html">
-                <img
-                  src="images/post-thumbnail-2.jpg"
-                  class="w-100 img-fluid"
-                  alt="blog-img"
-                />
-              </a>
-              <div class="row mt-3 px-3">
-                <div class="col-md-6 col-sm-6 col-6">
-                  <div class="d-flex">
-                    <i class="bi bi-calendar-check text-muted me-2"></i>
-                    <p class="text-muted">22 Aug 2021</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 col-sm-6 col-6">
-                  <div class="d-flex">
-                    <i class="fa-regular fa-folder text-muted mt-1 me-2"></i>
-                    <p class="text-muted">tips & tricks</p>
-                  </div>
-                </div>
-              </div>
-              <div class="px-3">
-                <a href="single_post.html" class="text-decoration-none">
-                  <h4 class="text-dark">
-                    Top 10 casual look ideas to dress up your kids
-                  </h4>
-
-                  <p class="text-muted">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptas sed corrupti incidunt perferendis repellendus
-                    maiores, rerum fuga nobis dolorum...
-                  </p>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mt-3">
-            <div class="card p-3 shadow">
-              <a href="single_post.html">
-                <img
-                  src="images/post-thumbnail-3.jpg"
-                  class="w-100 img-fluid"
-                  alt=""
-                />
-              </a>
-              <div class="row mt-3 px-3">
-                <div class="col-md-6 col-sm-6 col-6">
-                  <div class="d-flex">
-                    <i class="bi bi-calendar-check me-2 text-muted"></i>
-                    <p class="text-muted">22 Aug 2021</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 col-sm-6 col-6">
-                  <div class="d-flex">
-                    <i class="fa-regular fa-folder text-muted mt-1 me-2"></i>
-                    <p class="text-muted">Inspiration</p>
-                  </div>
-                </div>
-              </div>
-              <div class="px-3">
-                <a href="single_post.html" class="text-decoration-none">
-                  <h4 class="text-dark">
-                    10 Different Types of comfortable clothes ideas for women
-                  </h4>
-
-                  <p class="text-muted">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptas sed corrupti incidunt perferendis repellendus
-                    maiores, rerum fuga nobis dolorum...
-                  </p>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- FOOTER SECTION -->
-    <footer class="pt-5 mb-5 section_animation">
+     <footer class="pt-5 mb-5 section_animation">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3 mt-3">
-            <div class="d-flex justify-content-center">
-              <img src="images/logo.svg" class="w-75" alt="logo" />
-            </div>
-            <div class="mt-3">
-              <ul class="social_links d-flex gap-2 justify-content-center">
-                <li>
-                  <i
-                    class="fa-brands fa-facebook-f border border-1 rounded text-muted"
-                  ></i>
-                </li>
-                <li>
-                  <i
-                    class="fa-brands fa-twitter border border-1 rounded text-muted"
-                  ></i>
-                </li>
-                <li>
-                  <i
-                    class="fa-brands fa-youtube border border-1 rounded text-muted"
-                  ></i>
-                </li>
-                <li>
-                  <i
-                    class="fa-brands fa-instagram border border-1 rounded text-muted"
-                  ></i>
-                </li>
-                <li>
-                  <i
-                    class="fa-brands fa-amazon border border-1 rounded text-muted"
-                  ></i>
-                </li>
-              </ul>
-            </div>
+             <div class="d-flex justify-content-center">
+               <img src="images/logo.svg" class="w-75" alt="logo">
+             </div>
+              <div class="mt-3">
+                <ul class="social_links d-flex gap-2 justify-content-center">
+                  <li>
+                    <i class="fa-brands fa-facebook-f border border-1 rounded text-muted"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-twitter border border-1 rounded text-muted"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-youtube border border-1 rounded text-muted"></i>
+                  </li> 
+                  <li>
+                    <i class="fa-brands fa-instagram border border-1 rounded text-muted"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-amazon border border-1 rounded text-muted"></i>
+                  </li>
+                </ul>
+              </div>
           </div>
           <div class="col-md-2 col-sm-6 col-6 mt-3 text-center">
             <h4>Organic</h4>
-            <ul class="footer_links">
-              <li>
-                <a href="#">About us</a>
-              </li>
-              <li>
-                <a href="#">Conditions</a>
-              </li>
-              <li>
-                <a href="#">Our Journals</a>
-              </li>
-              <li>
-                <a href="#">Careers</a>
-              </li>
-              <li>
-                <a href="#">Affiliate Programme</a>
-              </li>
-              <li>
-                <a href="#">Ultras Press</a>
-              </li>
-            </ul>
+              <ul class="footer_links">
+                <li>
+                  <a href="#">About us</a>
+                </li>
+                <li>
+                  <a href="#">Conditions</a>
+                </li>
+                <li>
+                  <a href="#">Our Journals</a>
+                </li>
+                <li>
+                  <a href="#">Careers</a>
+                </li>
+                <li>
+                  <a href="#">Affiliate Programme</a>
+                </li>
+                <li>
+                  <a href="#">Ultras Press</a>
+                </li>
+              </ul>
           </div>
-          <div class="col-md-2 col-sm-6 col-6 mt-3 text-center">
+          <div class="col-md-2 col-sm-6 col-6 mt-3  text-center">
             <h4>Quick Links</h4>
-            <ul class="footer_links">
-              <li>
-                <a href="#">Offers</a>
-              </li>
-              <li>
-                <a href="#">Discount Coupons</a>
-              </li>
-              <li>
-                <a href="#">Stores</a>
-              </li>
-              <li>
-                <a href="#">Track Order</a>
-              </li>
-              <li>
-                <a href="#">Shop</a>
-              </li>
-              <li>
-                <a href="#">Info</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-2 col-sm-6 col-6 mt-3 text-center">
+              <ul class="footer_links">
+                <li>
+                  <a href="#">Offers</a>
+                </li>
+                <li>
+                  <a href="#">Discount Coupons</a>
+                </li>
+                <li>
+                  <a href="#">Stores</a>
+                </li>
+                <li>
+                  <a href="#">Track Order</a>
+                </li>
+                <li>
+                  <a href="#">Shop</a>
+                </li>
+                <li>
+                  <a href="#">Info</a>
+                </li>
+              </ul>
+            </div>
+          <div class="col-md-2 col-sm-6 col-6 mt-3  text-center">
             <h4>Customer Service</h4>
-            <ul class="footer_links">
-              <li>
-                <a href="#">FAQ</a>
-              </li>
-              <li>
-                <a href="#">Contact</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li>
-                <a href="#">Returns & Refunds</a>
-              </li>
-              <li>
-                <a href="#">Cookie Guidelines</a>
-              </li>
-              <li>
-                <a href="#">Delivery Information</a>
-              </li>
-            </ul>
+              <ul class="footer_links">
+                <li>
+                  <a href="#">FAQ</a>
+                </li>
+                <li>
+                  <a href="#">Contact</a>
+                </li>
+                <li>
+                  <a href="#">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="#">Returns & Refunds</a>
+                </li>
+                <li>
+                  <a href="#">Cookie Guidelines</a>
+                </li>
+                <li>
+                  <a href="#">Delivery Information</a>
+                </li>
+              </ul>
           </div>
-          <div class="col-md-3 col-sm-6 col-6 mt-3 text-center">
+          <div class="col-md-3 col-sm-6 col-6 mt-3  text-center">
             <h4>Subscribe Us</h4>
-            <p class="text-muted p-2">
-              Subscribe to our newsletter to get updates about our grand offers.
-            </p>
+            <p class="text-muted  p-2">Subscribe to our newsletter to get updates about our grand offers.</p>
             <div class="d-flex p-2">
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Email Address"
-                class="w-75 border-0 rounded-start ps-2 bg-success-subtle py-1"
-              />
-              <input
-                type="submit"
-                value="Subscribe"
-                class="w-25 bg-dark text-white border-0 ps-2 py-1 rounded-end"
-              />
+              <input type="email" name="email" id="email" placeholder="Email Address" class="w-75 border-0 rounded-start ps-2 bg-success-subtle py-1">
+              <input type="submit" value="Subscribe" class="w-25 bg-dark text-white border-0 ps-2 py-1 rounded-end">
             </div>
           </div>
         </div>
       </div>
-    </footer>
+     </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
