--- a/single_post.html
+++ b/single_post.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Organic Food</title>
+    <link rel="icon" href="images/fav-icon.png" type="image/png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,17 +17,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-    <!-- fontawesome cdn -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+<!-- fontawesome cdn -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -49,112 +44,84 @@
                   class="d-inline-block align-text-top"
                 />
               </a>
-              <a href="#" id="menuOpen"
-                ><i class="bi bi-list ps-2 fs-2 text-dark"></i
-              ></a>
+              <a href="#" id="menuOpen"><i class="bi bi-list ps-2 fs-2 text-dark"></i></a>
             </div>
             <!-- menu section hidden -->
-            <div class="menu_div_hidden">
+             <div class="menu_div_hidden">
               <div class="d-flex justify-content-between px-3">
                 <p class="fs-4">MENU</p>
-                <a
-                  href="#"
-                  id="menuClose"
-                  class="text-dark text-decoration-none mt-1"
-                  ><i class="fa-solid fa-x"></i
-                ></a>
+                <a href="#" id="menuClose" class="text-dark text-decoration-none mt-1"><i class="fa-solid fa-x"></i></a>
               </div>
               <div class="px-4 mt-3">
                 <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-apple-whole me-3"></i>Fruits and
-                  Vegetables</a
-                >
-                <hr class="me-4" />
+                  <i class="fa-solid fa-apple-whole me-3"></i>Fruits and Vegetables</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-egg me-3"></i>Dairy and Eggs</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-egg me-3"></i>Dairy and Eggs</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-drumstick-bite me-3"></i>Meat and
-                  Poultry</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-drumstick-bite me-3"></i>Meat and Poultry</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-fish me-3"></i>Seafood</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-fish me-3"></i>Seafood</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-bread-slice me-3"></i>Bakery and
-                  Bread</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-bread-slice me-3"></i>Bakery and Bread</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-bottle-droplet me-3"></i>Canned Goods</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-bottle-droplet me-3"></i>Canned Goods</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-drumstick-bite me-3"></i>Frozen Foods</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-drumstick-bite me-3"></i>Frozen Foods</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-bowl-food me-3"></i>Pasta and Rice</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-bowl-food me-3"></i>Pasta and Rice</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-bread-slice me-3"></i>Breakfast Foods</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-bread-slice me-3"></i>Breakfast Foods</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-cookie me-3"></i>Snacks and Chips</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-cookie me-3"></i>Snacks and Chips</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-beer-mug-empty me-3"></i>Beverage</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-beer-mug-empty me-3"></i>Beverage</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-mortar-pestle me-3"></i>Spices and
-                  Seasonings</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-mortar-pestle me-3"></i>Spices and Seasonings</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-baby me-3"></i>Baby Food and Formula</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-baby me-3"></i>Baby Food and Formula</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-spa me-3"></i>Health and Welness</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-spa me-3"></i>Health and Welness</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-arrow-up-from-water-pump me-3"></i
-                  >Household Supplies</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-arrow-up-from-water-pump me-3"></i>Household Supplies</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-person-cane me-3"></i>Personal Care</a
-                >
-                <hr class="me-4" />
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-person-cane me-3"></i>Personal Care</a>
+                  <hr class="me-4">
 
-                <a href="#" class="text-dark text-decoration-none">
-                  <i class="fa-solid fa-cat me-3"></i>Pet Food and Supplies</a
-                >
+                  <a href="#" class="text-dark text-decoration-none">
+                  <i class="fa-solid fa-cat me-3"></i>Pet Food and Supplies</a>
+                  <hr class="me-4">
               </div>
-            </div>
+             </div>
           </div>
           <!-- search box -->
           <div class="col-md-4 col-10 mx-auto justify-content-sm-center">
@@ -221,12 +188,15 @@
                     PAGES
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">CART</a></li>
-                    <li><a class="dropdown-item" href="#">CHECKOUT</a></li>
-                    <li><a class="dropdown-item" href="#">BLOG</a></li>
-                    <li><a class="dropdown-item" href="#">CONTACT</a></li>
-                    <li><a class="dropdown-item" href="#">MY ACCOUNT</a></li>
-                    <li><a class="dropdown-item" href="#">404 PAGE</a></li>
+                    <li><a class="dropdown-item" href="about_us.html">ABOUT US</a></li>
+                    <li><a class="dropdown-item" href="single_product.html">SINGLE PRODUCT</a></li>
+                    <li><a class="dropdown-item" href="cart.html">CART</a></li>
+                    <li><a class="dropdown-item" href="checkout.html">CHECKOUT</a></li>
+                    <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                    <li><a class="dropdown-item" href="single_post.html">SINGLE BLOG</a></li>
+                    <li><a class="dropdown-item" href="contact.html">CONTACT</a></li>
+                    <li><a class="dropdown-item" href="my_account.html">MY ACCOUNT</a></li>
+                    <li><a class="dropdown-item" href="error_page.html">404 PAGE</a></li>
                   </ul>
                 </li>
               </ul>
