product page modified

--- a/single_product.html
+++ b/single_product.html
@@ -222,15 +222,24 @@
     <!-- PRODUCT-DETAILS SECTION  -->
     <section class="container mt-5">
         <div class="row">
-            <div class="col-md-4">
-                <div class="zoom overflow-hidden">
-                    <img src="images/category-thumb-1.jpg" alt="" class="img-fluid">
+            <div class="col-md-4 col-12">
+                <div class="zoom overflow-hidden text-center mt-4">
+                    <img src="images/coffee.webp" alt="" class="img-fluid single_product_img ">
                 </div>
             </div>
-            <div class="col-md-8">
-                <h4>G9 Pro+ Stereo Type-C Charging Long Standby Wireless Neckband Headphone With Microphone</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, porro magnam unde tenetur dolorum ad incidunt rem nemo consequatur sunt omnis autem quia earum esse, quae nihil reprehenderit, vero sint.</p>
-                <div class="row">
+
+            <div class="col-md-8 col-12 mt-4">
+                <h5>Nestle Nescafe Classic Instant Coffee Jar</h5>
+                <div class="">
+                    <i class="bi bi-star-fill text-warning"></i>
+                    <a class="text-decoration-none " href="#rating_section"><span class="ms-2">4.6 (950)</span></a> 
+                    <span class="bar_color ms-3">|</span> 
+                    <span class="ms-3">6.2k sold</span>
+                    <span class="bar_color ms-3">|</span> 
+                    <a class="text-dark" href="#"><i class="bi bi-share-fill ms-3"></i></a>
+                    <a class="text-dark" href="#"><i class="bi bi-heart-fill ms-3"></i></a>
+                </div>
+                <!-- <div class="row">
                     <div class="col-md-3">
                         <input type="number" name="" id="" placeholder="Product Quantity" class="form-control">
                     </div>
@@ -238,7 +247,7 @@
                         <button type="button" class="btn btn-primary">Add to Cart</button>
                         <button type="button" class="btn btn-primary">Buy Now</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <h4 class="mt-4">Product details of G9 Pro+ Stereo Type-C Charging Long Standby Wireless Neckband Headphone With Microphone</h4>
