404 & contact page are done

--- a/error_page.html
+++ b/error_page.html
@@ -219,6 +219,18 @@
       </div>
     </div>
 
+    <!-- 404 text -->
+     <div class="container-fluid">
+        <div class="text-center mt-5">
+          <p class="oops_text fw-bold text-dark">OOPS!</p>
+
+          <p class="error_text fw-bold">404</p>
+          <p class="fs-2 fw-bold mb-5">Page not found</p>
+
+          <a href="index.html" class="text-decoration-none text-light bg-success rounded-1 mt-5 px-5 py-3">Go to Home page</a>
+        </div>
+     </div>
+
 
 
     <!-- FOOTER SECTION -->
