--- a/contact.html
+++ b/contact.html
@@ -220,6 +220,116 @@
     </div>
 
 
+    <!-- MAP & FORM SECTION -->
+     <section class="mt-5">
+        <div class="container">
+            <div class="row">
+                <!-- find me on map -->
+                <div class="col-md-5 mt-5 p-3">
+                    <h2 class="text-center "><span class="border-bottom border-3 border-success">Find us on Map</span>
+                    </h2>
+                    <div class="mt-4">
+                        <div class="d-flex ">
+                            <i class="bi bi-geo-alt-fill me-2"></i>
+                            <p>Navana Obaid Eternia, 3rd Floor 28/A-29/B Dhaka, 1217</p>
+                        </div>
+                        <div class="d-flex ">
+                            <i class="bi bi-telephone-fill me-2"></i>
+                            <p>+009998475347</p>
+                        </div>
+                        <div class="d-flex ">
+                            <i class="bi bi-envelope-at-fill me-2"></i>
+                            <p>abcd@gmail.com</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center h-100">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.278495061178!2d90.40701217439116!3d23.737446289275315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9183ec90c79%3A0xe1511972be9e4337!2z4Ka44Ka-4Kau4Ka-4KaH4Kaw4Ka-IOCmuOCnjeCmleCmv-CmsiDgpqHgp4fgpq3gp4fgprLgpqrgpq7gp4fgpqjgp43gpp8g4KaH4Kao4Ka44KeN4Kaf4Ka_4Kaf4Ka_4KaJ4KafICjgprbgpqbgpr8p!5e0!3m2!1sbn!2sbd!4v1764396639260!5m2!1sbn!2sbd"
+                            class="w-100 h-50" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+
+                </div>
+
+                <!-- form -->
+                <div class="col-md-7 mt-5 p-3">
+                    <h2 class="text-center "><span class=" border-bottom border-3 border-success ">Send a
+                            massage</span>
+                    </h2>
+                    <form action="" method="get" class="needs-validation" novalidate>
+                        <div class="row mt-4">
+                            <div class="col-12 mb-3">
+                                <label for="validationServer01" class="form-label">Name:</label>
+                                <input type="text" class="form-control  border-info" id="validationServer01"
+                                    placeholder="Your Name" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback">
+                                    Enter a valid name
+                                </div>
+                            </div>
+
+                            <div class="col-12 mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Email:</label>
+                                <input type="email" class="form-control border-info" id="exampleFormControlInput1"
+                                    placeholder="Enter your email" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback">
+                                    Enter a valid email
+                                </div>
+                            </div>
+
+                            <div class="col-12 mb-3">
+                                <label for="exampleFormControlInput2" class="form-label">Phone:</label>
+                                <input pattern="[0-9]{11,}" inputmode="numeric" class="form-control border-info"
+                                    id="exampleFormControlInput2" placeholder="Your phone number" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback">
+                                    Enter a valid phone number
+                                </div>
+                            </div>
+
+                            <div class="col-12 mb-3">
+                                <label for="validationServer01" class="form-label">Address:</label>
+                                <input type="text" class="form-control border-info" id="validationServer01"
+                                    placeholder="Your address" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback">
+                                    Enter a valid address
+                                </div>
+                            </div>
+
+                            <div class="col-12 mb-3 ">
+                                <label for="exampleFormControlTextarea1" class="form-label">Massage:</label>
+                                <textarea class="form-control border-info" id="exampleFormControlTextarea1" rows="3"
+                                    placeholder="Your massage" required></textarea>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback">
+                                    Enter a valid massage
+                                </div>
+                            </div>
+
+                            <div class="col-12 text-center">
+                                <button class="btn btn-primary" type="submit">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 
     <!-- FOOTER SECTION -->
